Fixed scrollbar coloring on dark *mode*, light *theme*

--- a/site/src/inspector_panel/InspectorPanel.css
+++ b/site/src/inspector_panel/InspectorPanel.css
@@ -69,6 +69,13 @@
   }
 }
 
+.theme-light .inspector-panel {
+  table {
+    scrollbar-color: var(--ifm-color-secondary-darker)
+      var(--ifm-color-secondary-light);
+  }
+}
+
 button.close-panel-button {
   border: none;
   padding: 0;
